# tomd

./: .gitignore  README.md  pyproject.toml  setup.sh  spec.md  test_gen.py  tomd.sh
out_md/: test.md  test_excel.md
test_docs/: test.docx  test_excel.xlsx
tests/: test_cli.py  test_dispatcher.py
tomd/: __init__.py  cli.py  dispatcher.py
tomd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tomd/parsers/: __init__.py  base.py  excel.py  pdf.py  word.py
